overflow fix

--- a/app/scss/pages/_application.scss
+++ b/app/scss/pages/_application.scss
@@ -1,5 +1,7 @@
 .application-page,
 .id-page {
+  overflow: visible;
+
   .info-container {
     &--disabled {
       display: none;
